<resources>
    <string name="app_name">Comic App</string>

    <string name="title_detail_title_name">Tên truyện</string>
    <string name="title_detail_title_category">Danh mục:</string>
    <string name="title_detail_view_count">View:</string>
    <string name="title_detail_publish_status">Tình trạng:</string>
    <string name="title_detail_created_date">Ngày tạo:</string>
    <string name="title_detail_chapter_list">Danh sách các chương</string>
    <string name="title_detail_comment_list">Bình luận</string>

    <string name="comment_confirm_button">Xác nhận</string>
    <string name="comment_cancel_button">Hủy</string>
    <string name="comment_content_placeholder">Nhập bình luận</string>

    <string name="home_latest_title_label">Truyện mới nhất>></string>
    <string name="home_all_title_label">Tất cả truyện>></string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_detail_write_comment_button">Viết Bình Luận</string>
    <string name="action_history">History</string>
    <string name="action_home">Home</string>
    <string name="action_user_profile">Profile</string>
    <string name="action_all_titles">Title</string>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_user_managing">Quản lý người dùng</string>
    <string name="menu_genre_managing">Quản lý thể loại</string>
    <string name="title_management">Quản lý truyện</string>
    <string name="comment_management">Quản lý comment</string>
    <string name="comic_cover">Ảnh truyện</string>
    <string name="genre_management">Quản lý danh mục</string>

    <string name="action_logout">Logout</string>
    <string name="action_admin">Admin</string>

    <string name="user_avatar">Ảnh đại diện người dùng</string>
    <string name="admin_tile_user">Quản lý người dùng</string>
    <string name="profile_button_text">Thông tin</string>
    <string name="button_lock">Khóa</string>
    <string name="button_unlock">Mở Khóa</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="user_role">User Role</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="hint_search_user">Tìm kiếm</string>

    <string name="action_button_text">Action</string>
    <string name="delete_comic">Delete</string>
    <string name="edit_comic">Edit</string>
    <string name="chat">Trò chuyện</string>
    <string name="action_message">Nhắn tin</string>
    <string name="message">Nhắn tin</string>

    <string-array name="user_role_options">
        <item>Admin</item>
        <item>Editor</item>
        <item>Viewer</item>
    </string-array>

    <string-array name="content_type_array">
        <item>Ảnh</item>
        <item>File Văn Bản</item>
    </string-array>
</resources>

