<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/menu_user_managing" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_genre_managing" />
        <item
            android:id="@+id/nav_title_management"
            android:icon="@drawable/baseline_apps_24"
            android:title="@string/title_management"/>
        <item
            android:id="@+id/nav_comment_management"
            android:icon="@drawable/baseline_comment_24"
            android:title="@string/comment_management"/>
    </group>

</menu>