<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.main.comicapp.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.main.comicapp.fragments.user.UserManagementFragment"
        android:label="@string/menu_user_managing"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.main.comicapp.activities.ui.genre.GenreManagingFragment"
        android:label="@string/menu_genre_managing"
        tools:layout="@layout/fragment_genre_management" />
</navigation>