<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TitleDetailActivity"
    >


    <ImageView
        android:id="@+id/title_detail_cover_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/title_detail_title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_detail_title_name"
        android:textSize="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">


        <TableRow android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_title_category" />

            <TextView
                android:id="@+id/title_detail_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title_detail_title_category_value" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_view_count" />

            <TextView
                android:id="@+id/title_detail_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title_detail_title_view_count_value" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_publish_status" />

            <TextView
                android:id="@+id/title_detail_publishing_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title_detail_publish_status_value" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_detail_created_date" />

            <TextView
                android:id="@+id/title_detail_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title_detail_created_date_value" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_detail_chapter_list"
        android:textSize="20dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_detail_comment_list"
        android:textSize="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/title_detail_chapter_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />
</LinearLayout>