<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.CommentActivity"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_comment_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/activity_comment_content_field"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:inputType="textMultiLine"
            android:hint="@string/comment_content_placeholder"
            android:padding="16dp"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/card_comment_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_comment_content_button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_confirm_button"
            app:backgroundTint="@color/design_default_color_primary"
            app:cornerRadius="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_comment_content_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/comment_cancel_button"
            app:backgroundTint="@color/design_default_color_primary"
            app:cornerRadius="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
